# csv-profiler

./: .gitignore  D5_Git_Project.ipynb  README.md  pyproject.toml
src/csv_profiler/: cli.py
